Add styling to main and content sections

--- a/index.html
+++ b/index.html
@@ -10,25 +10,26 @@
     </head>
     <body>
         <div class="header">
-            <div>
+            <div class="header-logo">
             Header Logo
             </div>
-            <div>
-            header link one
-            header link two
-            header link three
+            <div class="header-links">
+                <div>header link one</div>
+                <div>header link two</div>
+                <div>header link three</div>
             </div>
         </div>
         <div class="main">
                 <div>
-                    <span class="larger-font">
-                    This website is awesome
-                   </span>
-                   <br>
-                   <span class="smaller-font">
-                    This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.
-                    <span>
-                    <br>
+                    <pre class="larger-font">
+                    This website is 
+                    awesome
+                    </pre>
+                   <pre class="smaller-font">
+                    This website has some subtext that goes here under the 
+                    main title. It's smaller font and the color is lower 
+                    contrast.
+                    <pre>
                 <button>Sign up</button>
                 </div>
                 <div>
@@ -37,25 +38,43 @@
             
         </div>
         <div class="content">
-            <div>
+            <div class="content-title">
                 Some random information.
             </div>
             
-            <div>
-                <img src="" alt="this is a placeholder for an image">
-                this is some subtext under an illustration or image
-            </div>
-            <div>  
-                <img src="" alt="this is a placeholder for an image">
-                this is some subtext under an illustration or image
-            </div>
-            <div>  
-                <img src="" alt="this is a placeholder for an image">
-                this is some subtext under an illustration or image
-            </div>
-            <div>
-                <img src="" alt="this is a placeholder for an image">
-                this is some subtext under an illustration or image
+            <div class="content-images">
+                <div>
+                    <div>
+                    <img src="images/white-square.jpg" alt="this is a placeholder for an image">
+                    </div>
+                    <div>
+                    this is some subtext under an illustration or image
+                    </div> 
+                </div>
+                <div>
+                    <div>
+                    <img src="images/white-square.jpg" alt="this is a placeholder for an image">
+                    </div>
+                    <div>
+                    this is some subtext under an illustration or image
+                    </div> 
+                </div>
+                <div>
+                    <div>
+                    <img src="images/white-square.jpg" alt="this is a placeholder for an image">
+                    </div>
+                    <div>
+                    this is some subtext under an illustration or image
+                    </div> 
+                </div>
+                <div>
+                    <div>
+                    <img src="images/white-square.jpg" alt="this is a placeholder for an image">
+                    </div>
+                    <div>
+                    this is some subtext under an illustration or image
+                    </div> 
+                </div>
             </div>
         </div>
         <div class="quote">
