feat: Add HTML landmarks

--- a/index.html
+++ b/index.html
@@ -4,105 +4,101 @@
         <meta charset="utf-8" lang="en">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
         <link rel="stylesheet" href="main.css">
-
-        </style>
-        <title>This website is awesome</title>
+        <title>
+            This website is awesome
+        </title>
     </head>
     <body>
-        <div class="header">
-            <div class="header-logo">
-            Header Logo
+        <header>
+            <div>
+                <a href="/">Header Logo</a>
             </div>
-            <div class="header-links">
-                <div>header link one</div>
-                <div>header link two</div>
-                <div>header link three</div>
-            </div>
-        </div>
-        <div class="main">
+            <nav>
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section class="hero">
                 <div>
-                    <pre class="larger-font">
-                    This website is 
-                    awesome
-                    </pre>
-                   <pre class="smaller-font">
-                    This website has some subtext that goes here under the 
-                    main title. It's smaller font and the color is lower 
-                    contrast.
-                    <pre>
-                <button>Sign up</button>
+                    <p>This website is awesome</p>
+                    <p>This website has some subtext that goes here under the main title. 
+                    It's smaller font and the color is lower contrast.</p>
+                    <button>Sign up</button>
                 </div>
                 <div>
-                <img src="" alt="this is a placeholder for an image">            
+                    <img src="" alt="this is a placeholder for an image">            
                 </div>
-            
-        </div>
-        <div class="content">
-            <div class="content-title">
-                Some random information.
-            </div>
-            
-            <div class="content-images">
+            </section>
+            <section class="content">
+                <div>
+                    Some random information.
+                </div>
                 <div>
                     <div>
-                    <img src="images/white-square.jpg" alt="this is a placeholder for an image">
+                        <div>
+                            <img src="images/white-square.jpg" alt="this is a placeholder for an image">
+                        </div>
+                        <div>
+                            this is some subtext under an illustration or image
+                        </div> 
                     </div>
                     <div>
-                    this is some subtext under an illustration or image
-                    </div> 
-                </div>
-                <div>
-                    <div>
-                    <img src="images/white-square.jpg" alt="this is a placeholder for an image">
+                        <div>
+                            <img src="images/white-square.jpg" alt="this is a placeholder for an image">
+                        </div>
+                        <div>
+                            this is some subtext under an illustration or image
+                        </div> 
                     </div>
                     <div>
-                    this is some subtext under an illustration or image
-                    </div> 
-                </div>
-                <div>
-                    <div>
-                    <img src="images/white-square.jpg" alt="this is a placeholder for an image">
+                        <div>
+                            <img src="images/white-square.jpg" alt="this is a placeholder for an image">
+                        </div>
+                        <div>
+                            this is some subtext under an illustration or image
+                        </div> 
                     </div>
                     <div>
-                    this is some subtext under an illustration or image
-                    </div> 
+                        <div>
+                            <img src="images/white-square.jpg" alt="this is a placeholder for an image">
+                        </div>
+                        <div>
+                            this is some subtext under an illustration or image
+                        </div> 
+                    </div>
+                </div>
+            </div>
+            <blockquote cite="http://www.theodinproject.com">
+                <div>
+                    This is an inspiring quote, or a testimonial from a customer.
+                    Maybe it's just filling up space, or maybe
+                    people will actually read it. Who knows? All I know 
+                    is that it looks nice.
                 </div>
                 <div>
+                    -Thor, God of Thunder
+                </div>
+            </blockquote>
+            <section class="call-to-action">
+                <div>
                     <div>
-                    <img src="images/white-square.jpg" alt="this is a placeholder for an image">
+                        Call to action! It's time!
                     </div>
                     <div>
-                    this is some subtext under an illustration or image
-                    </div> 
-                </div>
-            </div>
-        </div>
-        <div class="quote">
-            <div>
-                This is an inspiring quote, or a testimonial from a customer.
-                Maybe it's just filling up space, or maybe
-                people will actually read it. Who knows? All I know 
-                is that it looks nice.
-            </div>
-            <div>
-                -Thor, God of Thunder
-            </div>
-        </div>
-        <div class="call-to-action">
-            <div>
-                <div>
-                    Call to action! It's time!
+                        Sign up for our product by clicking that button right over there!
+                    </div>
                 </div>
                 <div>
-                    Sign up for our product by clicking that button right over there!
+                    <button>Sign up</button>
                 </div>
-            </div>
-            <div>
-                <button>Sign up</button>
-            </div>
-        </div>
-        <div class="footer">
+            </section>
+        </main>
+        <footer>
             Copyright © The Odin Project 2021
-        </div>
+        </footer>
     </body>
-</html>     
+</html>
