--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <body>
         <header>
             <div>
-                <a href="/">Header Logo</a>
+                Header Logo
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">header link one</a></li>
-                    <li><a href="#">header link two</a></li>
-                    <li><a href="#">header link three</a></li>
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
                 </ul>
             </nav>
         </header>
@@ -26,7 +26,7 @@
                 <div>
                     <p>This website is awesome</p>
                     <p>This website has some subtext that goes here under the main title. 
-                    It's smaller font and the color is lower contrast.</p>
+                    It's smaller font and the color is lower contrast</p>
                     <button>Sign up</button>
                 </div>
                 <div>
@@ -43,7 +43,7 @@
                             <img src="images/white-square.jpg" alt="this is a placeholder for an image">
                         </div>
                         <div>
-                            this is some subtext under an illustration or image
+                            <p>this is some subtext under an illustration or image</p>
                         </div> 
                     </div>
                     <div>
@@ -51,7 +51,7 @@
                             <img src="images/white-square.jpg" alt="this is a placeholder for an image">
                         </div>
                         <div>
-                            this is some subtext under an illustration or image
+                            <p>this is some subtext under an illustration or image</p>
                         </div> 
                     </div>
                     <div>
@@ -59,7 +59,7 @@
                             <img src="images/white-square.jpg" alt="this is a placeholder for an image">
                         </div>
                         <div>
-                            this is some subtext under an illustration or image
+                            <p>this is some subtext under an illustration or image</p>
                         </div> 
                     </div>
                     <div>
@@ -67,11 +67,11 @@
                             <img src="images/white-square.jpg" alt="this is a placeholder for an image">
                         </div>
                         <div>
-                            this is some subtext under an illustration or image
+                            <p>this is some subtext under an illustration or image</p>
                         </div> 
                     </div>
                 </div>
-            </div>
+            </section>
             <blockquote cite="http://www.theodinproject.com">
                 <div>
                     This is an inspiring quote, or a testimonial from a customer.
